updates in euro

--- a/drinks.html
+++ b/drinks.html
@@ -358,51 +358,51 @@
 
                 <div class="menu-item">
                     <h4 data-i18n="coca cola">Кока кола/Кока кола Zero 250 мл</h4>
-                    <p class="price">3.10 лв.</p>
+                    <p class="price">1.60 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="fanta">Фанта портокал/лимон 250 мл</h4>
-                    <p class="price">3.10 лв.</p>
+                    <p class="price">1.60 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="sprite">Спрайт 250 мл</h4>
-                    <p class="price">3.10 лв.</p>
+                    <p class="price">1.60 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="schweppes">Швепс 250 мл</h4>
                     <div class="menu-item-description" data-i18n="schweppes flavors">Tоник/битер лимон/мандарина</div>
-                    <p class="price">3.10 лв.</p>
+                    <p class="price">1.60 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="soda">Сода 250 мл</h4>
-                    <p class="price">2.30 лв.</p>
+                    <p class="price">1.20 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="mineral water">Минерална вода 500 мл</h4>
-                    <p class="price">2.10 лв.</p>
+                    <p class="price">1.20 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="cappy">Капи 250 мл</h4>
                     <div class="menu-item-description" data-i18n="cappy flavors">Портокал/червен
                         портокал/ябълка/кайсия/праскова/вишна</div>
-                    <p class="price">3.40 лв.</p>
+                    <p class="price">2.00 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="fuzetea">Студен чай - Fuze tea 250 мл</h4>
                     <div class="menu-item-description" data-i18n="fuzetea flavors">Лимон/праскова</div>
-                    <p class="price">3.40 лв.</p>
+                    <p class="price">2.00 €</p>
                 </div>
 
                     <div class="menu-item">
                     <h4 data-i18n="red-bull">Ред Бул</h4>
-                    <p class="price">5.00 лв.</p>
+                    <p class="price">2.90 €</p>
                 </div>
             </section>
 
@@ -414,22 +414,22 @@
 
                 <div class="menu-item">
                     <h4 data-i18n="coffee">Кафе 60 г</h4>
-                    <p class="price">2.20 лв.</p>
+                    <p class="price">1.30 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="tea">Чай 60 г</h4>
-                    <p class="price">2.30 лв.</p>
+                    <p class="price">1.30 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="cream">Сметана</h4>
-                    <p class="price">0.35 лв.</p>
+                    <p class="price">0.20 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="honey">Мед</h4>
-                    <p class="price">0.40 лв</p>
+                    <p class="price">0.20 €</p>
                 </div>
             </section>
 
@@ -440,12 +440,12 @@
 
                 <div class="menu-item">
                     <h4 data-i18n="stella 330">Stella Artois 330 мл</h4>
-                    <p class="price">3.50 лв.</p>
+                    <p class="price">1.80 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="stella 500 draft">Stella Artois 500 мл</h4>
-                    <p class="price">5.00 лв.</p>
+                    <p class="price">2.70 €</p>
                 </div>
 
                 <div class="type">
@@ -454,37 +454,37 @@
 
                 <div class="menu-item">
                     <h4 data-i18n="kamenitza">Каменица 500 мл</h4>
-                    <p class="price">3.80 лв.</p>
+                    <p class="price">2.00 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="burgasko">Бургаско 500 мл</h4>
-                    <p class="price">3.80 лв.</p>
+                    <p class="price">2.00 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="staropramen">Staropramen 500 мл</h4>
-                    <p class="price">4.00 лв.</p>
+                    <p class="price">2.00 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="staropramen dark">Staropramen dark (сезонно) 500 мл</h4>
-                    <p class="price">4.00 лв.</p>
+                    <p class="price">2.00 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="staropramen 0">Staropramen 0% (безалкохолна) 500 мл</h4>
-                    <p class="price">4.00 лв.</p>
+                    <p class="price">2.00 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="stella 500 bottle">Stella Artois 500 мл</h4>
-                    <p class="price">4.60 лв.</p>
+                    <p class="price">2.50 €</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="corona">Corona 355 мл</h4>
-                    <p class="price">5.50 лв.</p>
+                    <p class="price">2.90 €</p>
                 </div>
             </section>
 
@@ -495,57 +495,57 @@
 
             <div class="menu-item">
                 <h4 data-i18n="karnobatska muskatova">Карнобатска мускатова 50 мл</h4>
-                <p class="price">3.20 лв.</p>
+                <p class="price">1.70 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="pomoriyska muskatova">Поморийска мускатова 50 мл</h4>
-                <p class="price">3.20 лв.</p>
+                <p class="price">1.70 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="slivenska perla">Сливенска перла 50 мл</h4>
-                <p class="price">4.00 лв.</p>
+                <p class="price">2.10 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="slivova">Сливова 50 мл</h4>
-                <p class="price">3.00 лв.</p>
+                <p class="price">1.60 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="burgaska muskatova">Бургаска мускатова 50 мл</h4>
-                <p class="price">3.20 лв.</p>
+                <p class="price">1.70 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="burgas 63">Бургас 63 50 мл</h4>
-                <p class="price">4.00 лв.</p>
+                <p class="price">2.20 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="burgas 63 barrel">Бургас 63 барел 50 мл</h4>
-                <p class="price">4.80 лв.</p>
+                <p class="price">2.50 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="vrachanska temenuga">Врачанска теменуга 50 мл</h4>
-                <p class="price">4.10 лв.</p>
+                <p class="price">2.20 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="apricot rakia">Кайсиева 50 мл</h4>
-                <p class="price">3.00 лв.</p>
+                <p class="price">1.60 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="straldzhanska muskatova">Стралджанска мускатова 50 мл</h4>
-                <p class="price">3.60 лв.</p>
+                <p class="price">2.00 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="grape rakia">Обикновена гроздова 50 мл</h4>
-                <p class="price">2.60 лв.</p>
+                <p class="price">1.40 €</p>
             </div>
 
             <div class="type">
@@ -554,22 +554,23 @@
 
             <div class="menu-item">
                 <h4 data-i18n="savoy silver">Savoy Силвър 50 мл</h4>
-                <p class="price"2.40"price 2.4">2.40 лв.</p>
+                <p class="price">1.30 €</p>
+            </div>
+
+                <div class="menu-item">
+                <h4 data-i18n="finlandia">Финландия 50 мл</h4>
+                <p class="price">2.10 €</p>
             </div>
 
             <div class="menu-item">
                 <h4 data-i18n="absolut">Абсолют 50 мл</h4>
-                <p class="price">4.00 лв.</p>
+                <p class="price">2.10 €</p>
             </div>
 
-            <div class="menu-item">
-                <h4 data-i18n="finlandia">Финландия 50 мл</h4>
-                <p class="price">4.00 лв.</p>
-            </div>
 
             <div class="menu-item">
                 <h4 data-i18n="russian standard">Руски стандарт 50 мл</h4>
-                <p class="price">4.60 лв.</p>
+                <p class="price">2.40 €</p>
             </div>
 
 
@@ -578,11 +579,11 @@
             </div>
             <div class="menu-item">
                 <h4 data-i18n="ouzo plomari">Узо Пломари 50 мл</h4>
-                <p class="price">4.00 лв.</p>
+                <p class="price">2.20 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="pastis pernod">Пастис Перно 50 мл</h4>
-                <p class="price">4.50 лв.</p>
+                <p class="price">2.50 €</p>
             </div>
 
             <div class="type">
@@ -590,43 +591,43 @@
             </div>
             <div class="menu-item">
                 <h4 data-i18n="savoy whiskey">Савой 50 мл</h4>
-                <p class="price">3.50 лв.</p>
+                <p class="price">1.80 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="bushmills">Бушмилс 50 мл</h4>
-                <p class="price">6.00 лв.</p>
+                <p class="price">3.10 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="baileys">Бейлис 50 мл</h4>
-                <p class="price">6.00 лв.</p>
+                <p class="price">3.10 €</p>
+            </div>
+                 <div class="menu-item">
+                <h4 data-i18n="jameson">Джеймисън 50 мл</h4>
+                <p class="price">3.10 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="j&b">J&B 50 мл</h4>
-                <p class="price">6.00 лв.</p>
-            </div>
-            <div class="menu-item">
-                <h4 data-i18n="jameson">Джеймисън 50 мл</h4>
-                <p class="price">6.00 лв.</p>
+                <p class="price">3.10 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="johnnie walker">Джони Уокър 50 мл</h4>
-                <p class="price">5.00 лв.</p>
+                <p class="price">2.60 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="johnnie walker 12">Джони Уокър 12г. 50 мл</h4>
-                <p class="price">8.50 лв.</p>
+                <p class="price">4.40 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="tullamore dew">Тюламор Дю 50 мл</h4>
-                <p class="price">6.00 лв.</p>
+                <p class="price">3.10 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="jim beam">Джим Бийм 50 мл</h4>
-                <p class="price">6.00 лв.</p>
+                <p class="price">3.10 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="jack daniels">Джак Даниелс 50 мл</h4>
-                <p class="price">7.90 лв.</p>
+                <p class="price">4.00 €</p>
             </div>
 
             <div class="type">
@@ -634,11 +635,11 @@
             </div>
             <div class="menu-item">
                 <h4 data-i18n="savoy gin">Савой 50 мл</h4>
-                <p class="price">2.60 лв.</p>
+                <p class="price">1.50 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="beefeater">Бийфитър 50 мл</h4>
-                <p class="price"4.40"price 4.4">4.40 лв.</p>
+                <p class="price">2.40 €</p>
             </div>
 
             <div class="type">
@@ -646,7 +647,7 @@
             </div>
             <div class="menu-item">
                 <h4 data-i18n="savoy rum">Савой 50 мл</h4>
-                <p class="price">2.60 лв.</p>
+                <p class="price">1.50 €</p>
             </div>
 
             <div class="type">
@@ -654,11 +655,11 @@
             </div>
             <div class="menu-item">
                 <h4 data-i18n="bulgarian vermouth">Вермут български</h4>
-                <p class="price">2.50 лв.</p>
+                <p class="price">1.30 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="martini">Мартини</h4>
-                <p class="price">3.00 лв.</p>
+                <p class="price">1.60 €</p>
                 <div class="menu-item-description" data-i18n="bianco dry">Бианко/сухо</div>
             </div>
 
@@ -667,11 +668,11 @@
             </div>
             <div class="menu-item">
                 <h4 data-i18n="karnobat mint">Карнобат</h4>
-                <p class="price">2.50 лв.</p>
+                <p class="price">1.40 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="marie brizard">Мари Бризар</h4>
-                <p class="price">3.10 лв.</p>
+                <p class="price">2.00 €</p>
             </div>
 
 
@@ -680,27 +681,27 @@
             </div>
             <div class="menu-item">
                 <h4 data-i18n="chateau karnobat white">Шато Карнобат 750 мл</h4>
-                <p class="price">18.40 лв.</p>
+                <p class="price">9.50 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="cycle white 750">Сайкъл 750 мл</h4>
-                <p class="price">25.00 лв.</p>
+                <p class="price">13.00 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="cycle white 375">Сайкъл 375 мл</h4>
-                <p class="price">12.50 лв.</p>
+                <p class="price">6.50 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="starosel white">Старосел 750 мл</h4>
-                <p class="price">33.00 лв.</p>
+                <p class="price">17.00 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="targovishte white">Търговище 750 мл</h4>
-                <p class="price">23.00 лв.</p>
+                <p class="price">12.00 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="glass of wine white">Чаша вино 200 мл</h4>
-                <p class="price">3.80 лв.</p>
+                <p class="price">2.00 €</p>
             </div>
 
             <div class="type">
@@ -708,27 +709,27 @@
             </div>
             <div class="menu-item">
                 <h4 data-i18n="chateau karnobat red">Шато Карнобат 750 мл</h4>
-                <p class="price">18.40 лв.</p>
+                <p class="price">9.50 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="cycle red 750">Сайкъл 750 мл</h4>
-                <p class="price">25.00 лв.</p>
+                <p class="price">13.00 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="cycle red 375">Сайкъл 375 мл</h4>
-                <p class="price">12.50 лв.</p>
+                <p class="price">6.50 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="starosel red">Старосел 750 мл</h4>
-                <p class="price">33.00 лв.</p>
+                <p class="price">17.00 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="targovishte red">Търговище 750 мл</h4>
-                <p class="price">23.00 лв.</p>
+                <p class="price">12.00 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="glass of wine red">Чаша вино 200 мл</h4>
-                <p class="price">3.80 лв.</p>
+                <p class="price">2.00 €</p>
             </div>
 
             <div class="type">
@@ -736,15 +737,15 @@
             </div>
             <div class="menu-item">
                 <h4 data-i18n="cycle rose">Сайкъл 750 мл</h4>
-                <p class="price">25.00 лв.</p>
+                <p class="price">13.00 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="katarzyna rose">Катаржина Розе 750 мл</h4>
-                <p class="price">31.00 лв.</p>
+                <p class="price">16.00 €</p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="starosel rose">Старосел Розе 750 мл</h4>
-                <p class="price">33.00 лв.</p>
+                <p class="price">17.00 €</p>
             </div>
 
 
