--- a/dishes.html
+++ b/dishes.html
@@ -556,7 +556,7 @@
                     <p class="price">4.80 €</p>
                 </div>
                 <div class="menu-item">
-                    <h4 data-i18n="meltedCheese"></h4>
+                    <h4 data-i18n="meltedCheese">Топено сирене пане със сладко от боровинки 200 г</h4>
                     <div class="menu-item-description"></div>
                     <p class="price">4.80 €</p>
                 </div>
@@ -566,7 +566,7 @@
                     <p class="price">5.00 €</p>
                 </div>
                 <div class="menu-item">
-                    <h4 data-i18n="mushrooms">Гъби в масло 150 г </h4>
+                    <h4 data-i18n="mushrooms">Гъби в масло 150 г</h4>
                     <div class="menu-item-description"></div>
                     <p class="price">3.60 €</p>
                 </div>
