update table.remove a mistake

--- a/dishes.html
+++ b/dishes.html
@@ -351,8 +351,7 @@
             }
 
             .menu-item p {
-                margin-top: 0.5rem;
-                align-self: flex-start;
+                align-self: flex-end;
                 /* price below description */
             }
 
@@ -1079,11 +1078,6 @@
                         <tr>
                             <td data-i18n="boiled-potatoes">Варени картофи</td>
                             <td data-i18n="200g">200 г</td>
-
-                            <t data-i18n="d100g">100 г</td>
-                        </tr>
-                        <tr>
-                            <td>&nbsp;</td>
                             <td data-i18n="100g">100 г</td>
                         </tr>
                         <tr>
